[package]
name = "test-assets"
version = "0.2.0"
license = "MIT/Apache-2.0"
description = "Download test assets, managing them outside of git"
documentation = "https://docs.rs/test-assets/"
repository = "https://github.com/est31/test-assets"
readme = "README.md"
authors = ["est31 <MTest31@outlook.com>"]
edition = "2021"

[dependencies]
curl = "0.4"
sha2 = "0.10.6"
